# InferenceStore

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  inferencestore.yaml
.github/workflows/: docker-build.yaml  docker-publish.yaml  formatting.yaml  test.yaml
models/cara/: config.pbtxt
models/cara/1/: model.onnx
models/simple/: config.pbtxt
models/simple/1/: model.onnx
src/: caching.rs  inference_store.rs  input_parsing.rs  main.rs  output_parsing.rs  service.rs  settings.rs  utils.rs
src/caching/: cachable.rs  cachable_modelconfig.rs  cachable_modelinfer.rs  cachestore.rs
src/parsing/: input.rs  output.rs
