[package]
name = "inference-store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inference-store"
path = "src/main.rs"

[dependencies]
config = "0.14"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"
serde_with = "3.8"
once_cell = "1.19"
log = "0.4.21"

[build-dependencies]
tonic-build = "0.11"