[package]
name = "inference-store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inference-store"
path = "src/main.rs"

[dependencies]
config = "0.14"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }
once_cell = "1.19"
log = "0.4.21"
tempdir = "0.3.7"
blake2 = "0.10.6"
digest = "0.10.7"
hex = "0.4.3"
anyhow = "1.0.86"
base64 = "0.22.1"
env_logger = "0.11.3"

[build-dependencies]
tonic-build = "0.11"
